Fix css transform blurriness in chromium browsers
Closes #24

--- a/backend/static/css/auth.css
+++ b/backend/static/css/auth.css
@@ -44,7 +44,7 @@ table input {
 }
 
 #center-div {
-    width: 50%;
+    width: 50vw;
     max-width: 600px;
 }
 
@@ -58,5 +58,9 @@ table input {
         margin-left: 0;
         width: 100%;
         max-width: unset;
+    }
+
+    input[type="radio"] {
+        width: unset;
     }
 }
