--- a/backend/static/css/vault.css
+++ b/backend/static/css/vault.css
@@ -3,7 +3,7 @@
 }
 
 #vault-items-div, #vault-file-div {
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-top: 20px;
 }
 
@@ -12,7 +12,7 @@
 }
 
 #vault-file-div {
-    height: 800px;
+    height: 50vh;
 }
 
 #pdf-canvas {
